MGDOBR-779: Make BridgeInstance error handling strategy editable