@@ -14,7 +14,6 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
-import org.quartz.SchedulerException;
 
 import com.redhat.service.smartevents.infra.exceptions.definitions.platform.InternalPlatformException;
 import com.redhat.service.smartevents.infra.models.ListResult;
@@ -24,6 +23,7 @@ import com.redhat.service.smartevents.infra.models.processors.ProcessorType;
 import com.redhat.service.smartevents.manager.ProcessorService;
 import com.redhat.service.smartevents.manager.RhoasService;
 import com.redhat.service.smartevents.manager.TestConstants;
+import com.redhat.service.smartevents.manager.api.models.requests.ProcessorRequest;
 import com.redhat.service.smartevents.manager.dao.BridgeDAO;
 import com.redhat.service.smartevents.manager.models.Bridge;
 import com.redhat.service.smartevents.manager.models.Processor;
@@ -39,14 +39,18 @@ import io.quarkus.test.common.QuarkusTestResource;
 import io.quarkus.test.junit.QuarkusTest;
 import io.quarkus.test.junit.mockito.InjectMock;
 
+import static com.redhat.service.smartevents.infra.models.dto.ManagedResourceStatus.ACCEPTED;
+import static com.redhat.service.smartevents.infra.models.dto.ManagedResourceStatus.PREPARING;
+import static com.redhat.service.smartevents.infra.models.dto.ManagedResourceStatus.PROVISIONING;
+import static com.redhat.service.smartevents.infra.models.dto.ManagedResourceStatus.READY;
 import static com.redhat.service.smartevents.manager.utils.TestUtils.createWebhookAction;
 import static com.redhat.service.smartevents.manager.workers.resources.WorkerTestUtils.makeWork;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatCode;
 import static org.mockito.ArgumentMatchers.any;
+import static org.mockito.ArgumentMatchers.anyString;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.doThrow;
-import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
@@ -85,6 +89,7 @@ class BridgeWorkerTest {
         databaseManagerUtils.cleanUp();
         when(resourceNamesProviderMock.getBridgeTopicName(any())).thenReturn(TEST_TOPIC_NAME);
         when(resourceNamesProviderMock.getBridgeErrorTopicName(any())).thenReturn(TEST_ERROR_HANDLER_TOPIC_NAME);
+        when(processorServiceMock.getHiddenProcessors(anyString(), anyString())).thenReturn(new ListResult<>(Collections.emptyList()));
     }
 
     @Test
@@ -124,24 +129,76 @@ class BridgeWorkerTest {
             ManagedResourceStatus dependencyStatusWhenComplete,
             boolean throwRhoasError,
             boolean isWorkComplete) {
-        doTestProvisionworkWithKnownResourceAndErrorHandler(status, dependencyStatusWhenComplete, throwRhoasError, isWorkComplete, false);
+        doTestProvisionWorkWithKnownResourceAndErrorHandler(status,
+                dependencyStatusWhenComplete,
+                throwRhoasError,
+                isWorkComplete);
     }
 
     @Transactional
     @ParameterizedTest
-    @MethodSource("provisionWorkWithKnownResourceParams")
+    @MethodSource("provisionWorkWithKnownResourceParamsWithErrorHandler")
     void testProvisionWorkWithKnownResourceAndErrorHandlerPresent(ManagedResourceStatus status,
             ManagedResourceStatus dependencyStatusWhenComplete,
             boolean throwRhoasError,
-            boolean isWorkComplete) throws SchedulerException {
-        doTestProvisionworkWithKnownResourceAndErrorHandler(status, dependencyStatusWhenComplete, throwRhoasError, isWorkComplete, true);
+            boolean isWorkComplete,
+            ManagedResourceStatus errorHandlerStatus) {
+        doTestProvisionWorkWithKnownResourceAndErrorHandler(status,
+                dependencyStatusWhenComplete,
+                throwRhoasError,
+                isWorkComplete,
+                true,
+                errorHandlerStatus);
     }
 
-    private void doTestProvisionworkWithKnownResourceAndErrorHandler(ManagedResourceStatus status,
+    @Transactional
+    @ParameterizedTest
+    @MethodSource("provisionWorkWithKnownResourceParamsWithErrorHandler")
+    void testProvisionWorkWithKnownResourceAndErrorHandlerPresentUpdating(ManagedResourceStatus status,
             ManagedResourceStatus dependencyStatusWhenComplete,
             boolean throwRhoasError,
             boolean isWorkComplete,
-            boolean errorHandlerProcessorPresent) {
+            ManagedResourceStatus errorHandlerStatus) {
+        doTestProvisionWorkWithKnownResourceAndErrorHandler(status,
+                dependencyStatusWhenComplete,
+                throwRhoasError,
+                isWorkComplete,
+                true,
+                errorHandlerStatus);
+
+        Bridge bridge = bridgeDAO.findById(TestConstants.DEFAULT_BRIDGE_ID);
+        bridge.setStatus(ACCEPTED);
+        bridge.setGeneration(bridge.getGeneration() + 1);
+
+        Work work = WorkerTestUtils.makeWork(bridge);
+
+        worker.handleWork(work);
+
+        verify(processorServiceMock,
+                times(throwRhoasError ? 0 : 1)).updateErrorHandlerProcessor(eq(bridge.getId()),
+                        anyString(),
+                        eq(bridge.getCustomerId()),
+                        any(ProcessorRequest.class));
+    }
+
+    private void doTestProvisionWorkWithKnownResourceAndErrorHandler(ManagedResourceStatus status,
+            ManagedResourceStatus dependencyStatusWhenComplete,
+            boolean throwRhoasError,
+            boolean isWorkComplete) {
+        doTestProvisionWorkWithKnownResourceAndErrorHandler(status,
+                dependencyStatusWhenComplete,
+                throwRhoasError,
+                isWorkComplete,
+                false,
+                READY);
+    }
+
+    private void doTestProvisionWorkWithKnownResourceAndErrorHandler(ManagedResourceStatus status,
+            ManagedResourceStatus dependencyStatusWhenComplete,
+            boolean throwRhoasError,
+            boolean isWorkComplete,
+            boolean errorHandlerProcessorPresent,
+            ManagedResourceStatus errorHandlerStatus) {
         Bridge bridge = Fixtures.createBridge();
         bridge.setId(TestConstants.DEFAULT_BRIDGE_ID);
         bridge.setStatus(status);
@@ -151,7 +208,7 @@ class BridgeWorkerTest {
         Work work = WorkerTestUtils.makeWork(bridge);
 
         List<Processor> processors = errorHandlerProcessorPresent
-                ? List.of(createErrorHandlerProcessor(bridge))
+                ? List.of(createErrorHandlerProcessor(bridge, errorHandlerStatus))
                 : Collections.emptyList();
 
         when(processorServiceMock.getHiddenProcessors(TestConstants.DEFAULT_BRIDGE_ID, TestConstants.DEFAULT_CUSTOMER_ID))
@@ -177,10 +234,18 @@ class BridgeWorkerTest {
 
     private static Stream<Arguments> provisionWorkWithKnownResourceParams() {
         return Stream.of(
-                Arguments.of(ManagedResourceStatus.ACCEPTED, ManagedResourceStatus.READY, false, true),
-                Arguments.of(ManagedResourceStatus.ACCEPTED, ManagedResourceStatus.PROVISIONING, true, false),
-                Arguments.of(ManagedResourceStatus.PREPARING, ManagedResourceStatus.READY, false, true),
-                Arguments.of(ManagedResourceStatus.PREPARING, ManagedResourceStatus.PROVISIONING, true, false));
+                Arguments.of(ACCEPTED, READY, false, true),
+                Arguments.of(ACCEPTED, PROVISIONING, true, false),
+                Arguments.of(PREPARING, READY, false, true),
+                Arguments.of(PREPARING, PROVISIONING, true, false));
+    }
+
+    private static Stream<Arguments> provisionWorkWithKnownResourceParamsWithErrorHandler() {
+        return Stream.of(
+                Arguments.of(ACCEPTED, READY, false, true, READY),
+                Arguments.of(ACCEPTED, PROVISIONING, true, false, READY),
+                Arguments.of(PREPARING, READY, false, true, READY),
+                Arguments.of(PREPARING, PROVISIONING, true, false, READY));
     }
 
     @Transactional
@@ -212,11 +277,12 @@ class BridgeWorkerTest {
 
     @Transactional
     @ParameterizedTest
-    @MethodSource("deletionWorkWithKnownResourceParams")
+    @MethodSource("deletionWorkWithKnownResourceParamsWithErrorHandler")
     void testDeletionWorkWithKnownResourceAndErrorHandler(ManagedResourceStatus status,
             ManagedResourceStatus dependencyStatusWhenComplete,
             boolean throwRhoasError,
-            boolean isWorkComplete) {
+            boolean isWorkComplete,
+            boolean isErrorHandlerDeleted) {
         Bridge bridge = Fixtures.createBridge();
         bridge.setId(TestConstants.DEFAULT_BRIDGE_ID);
         bridge.setStatus(status);
@@ -225,34 +291,40 @@ class BridgeWorkerTest {
 
         Work work = WorkerTestUtils.makeWork(bridge);
 
+        // The ErrorHandler Processor will first exist
         when(processorServiceMock.getHiddenProcessors(TestConstants.DEFAULT_BRIDGE_ID, TestConstants.DEFAULT_CUSTOMER_ID))
-                .thenReturn(new ListResult<>(List.of(createErrorHandlerProcessor(bridge)), 0, 1));
+                .thenReturn(new ListResult<>(List.of(createErrorHandlerProcessor(bridge, READY))));
 
-        Bridge refreshed = worker.handleWork(work);
-
-        assertThat(refreshed.getDependencyStatus()).isNotEqualTo(dependencyStatusWhenComplete);
-        verify(workManager).reschedule(work);
-
-        when(processorServiceMock.getHiddenProcessors(TestConstants.DEFAULT_BRIDGE_ID, TestConstants.DEFAULT_CUSTOMER_ID))
-                .thenReturn(new ListResult<>(Collections.emptyList(), 0, 0));
+        // The ErrorHandler Processor may then be successfully deleted
+        if (isErrorHandlerDeleted) {
+            when(processorServiceMock.getHiddenProcessors(TestConstants.DEFAULT_BRIDGE_ID, TestConstants.DEFAULT_CUSTOMER_ID))
+                    .thenReturn(new ListResult<>(Collections.emptyList()));
+        } else {
+            when(processorServiceMock.getHiddenProcessors(TestConstants.DEFAULT_BRIDGE_ID, TestConstants.DEFAULT_CUSTOMER_ID))
+                    .thenReturn(new ListResult<>(List.of(createErrorHandlerProcessor(bridge, READY))));
+        }
 
         if (throwRhoasError) {
             doThrow(new InternalPlatformException("error")).when(rhoasServiceMock).deleteTopicAndRevokeAccessFor(any(), any());
-
-            Bridge refreshed2 = worker.handleWork(work);
-
-            verify(rhoasServiceMock).deleteTopicAndRevokeAccessFor(TEST_TOPIC_NAME, RhoasTopicAccessType.CONSUMER_AND_PRODUCER);
-            verify(rhoasServiceMock, never()).deleteTopicAndRevokeAccessFor(TEST_ERROR_HANDLER_TOPIC_NAME, RhoasTopicAccessType.CONSUMER_AND_PRODUCER);
-            assertThat(refreshed2.getDependencyStatus()).isEqualTo(dependencyStatusWhenComplete);
-        } else {
-            Bridge refreshed2 = worker.handleWork(work);
-
-            verify(rhoasServiceMock).deleteTopicAndRevokeAccessFor(TEST_TOPIC_NAME, RhoasTopicAccessType.CONSUMER_AND_PRODUCER);
-            verify(rhoasServiceMock).deleteTopicAndRevokeAccessFor(TEST_ERROR_HANDLER_TOPIC_NAME, RhoasTopicAccessType.CONSUMER_AND_PRODUCER);
-            assertThat(refreshed2.getDependencyStatus()).isEqualTo(dependencyStatusWhenComplete);
         }
 
-        verify(workManager, times(isWorkComplete ? 1 : 2)).reschedule(work);
+        Bridge refreshed1 = worker.handleWork(work);
+
+        verify(rhoasServiceMock).deleteTopicAndRevokeAccessFor(TEST_TOPIC_NAME, RhoasTopicAccessType.CONSUMER_AND_PRODUCER);
+        verify(rhoasServiceMock, times(throwRhoasError ? 0 : 1)).deleteTopicAndRevokeAccessFor(TEST_ERROR_HANDLER_TOPIC_NAME, RhoasTopicAccessType.CONSUMER_AND_PRODUCER);
+        assertThat(refreshed1.getDependencyStatus()).isEqualTo(dependencyStatusWhenComplete);
+
+        if (isErrorHandlerDeleted) {
+            assertThat(refreshed1.getDependencyStatus()).isEqualTo(dependencyStatusWhenComplete);
+            verify(workManager, times(isWorkComplete ? 0 : 1)).reschedule(work);
+        } else {
+            assertThat(refreshed1.getDependencyStatus()).isEqualTo(ManagedResourceStatus.DELETING);
+
+            Bridge refreshed2 = worker.handleWork(work);
+
+            assertThat(refreshed2.getDependencyStatus()).isEqualTo(dependencyStatusWhenComplete);
+            verify(workManager, times(isWorkComplete ? 1 : 2)).reschedule(work);
+        }
     }
 
     private static Stream<Arguments> deletionWorkWithKnownResourceParams() {
@@ -263,8 +335,20 @@ class BridgeWorkerTest {
                 Arguments.of(ManagedResourceStatus.DELETING, ManagedResourceStatus.DELETING, true, false));
     }
 
-    private static Processor createErrorHandlerProcessor(Bridge bridge) {
-        Processor processor = Fixtures.createProcessor(bridge, ManagedResourceStatus.READY);
+    private static Stream<Arguments> deletionWorkWithKnownResourceParamsWithErrorHandler() {
+        return Stream.of(
+                Arguments.of(ManagedResourceStatus.DEPROVISION, ManagedResourceStatus.DELETED, false, true, true),
+                Arguments.of(ManagedResourceStatus.DEPROVISION, ManagedResourceStatus.DELETING, true, false, true),
+                Arguments.of(ManagedResourceStatus.DELETING, ManagedResourceStatus.DELETED, false, true, true),
+                Arguments.of(ManagedResourceStatus.DELETING, ManagedResourceStatus.DELETING, true, false, true),
+                Arguments.of(ManagedResourceStatus.DEPROVISION, ManagedResourceStatus.DELETING, false, false, false),
+                Arguments.of(ManagedResourceStatus.DEPROVISION, ManagedResourceStatus.DELETING, true, false, false),
+                Arguments.of(ManagedResourceStatus.DELETING, ManagedResourceStatus.DELETING, false, false, false),
+                Arguments.of(ManagedResourceStatus.DELETING, ManagedResourceStatus.DELETING, true, false, false));
+    }
+
+    private static Processor createErrorHandlerProcessor(Bridge bridge, ManagedResourceStatus status) {
+        Processor processor = Fixtures.createProcessor(bridge, status);
         processor.setType(ProcessorType.ERROR_HANDLER);
         return processor;
     }
